[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awavo"
version = "0.1.0"
description = "Reference implementation of AWaVO (arXiv:2307.07084) with Gym (CartPole/Acrobot) and optional GUARD (Walker/Drone) adapters."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Yanran Wang"}]
dependencies = [
  "numpy>=1.23",
  "torch>=2.1",
  "gymnasium>=0.29",
  "tensorboard>=2.14",
  "tqdm>=4.66"
]


[project.scripts]
awavo-train = "awavo.scripts.train:main"
awavo-eval = "awavo.scripts.eval:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
